--- a/index.html
+++ b/index.html
@@ -6,11 +6,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skaiciuotuvas</title>
+    <link rel="stylesheet" href="./css/home.css">
 </head>
 
 <body>
+    <div class="skaiciuotuvas">
+        <div class="screen">100</div>
+        <div class="answer">500</div>
+        <div class="keybord">
+            <div class="button pilkas">c</div>
+            <div class="button pilkas">+/-</div>
+            <div class="button pilkas">%</div>
+            <div class="button tamsiai">/</div>
+            <div class="button">1</div>
+            <div class="button">2</div>
+            <div class="button">3</div>
+            <div class="button tamsiai">x</div>
+            <div class="button">4</div>
+            <div class="button">5</div>
+            <div class="button">6</div>
+            <div class="button tamsiai">-</div>
+            <div class="button">7</div>
+            <div class="button">8</div>
+            <div class="button">9</div>
+            <div class="button tamsiai">+</div>
+            <div class="button">0</div>
+            <div class="button">.</div>
+            <div class="button">[x]</div>
+            <div class="button raudonas">=</div>
+        </div>
+    </div>
     <script src="./js/main.js" type="module" defer></script>
-
 </body>
 
 </html>
